--- a/.github/workflows/arxiv-daily.yml
+++ b/.github/workflows/arxiv-daily.yml
@@ -1,4 +1,3 @@
-
 name: Daily Arxiv Report
 
 on:
@@ -24,16 +23,13 @@ jobs:
       - name: 1. Checkout repository
         uses: actions/checkout@v4
 
-      - name: 2. Set up Python 3.11 and uv
-        uses: actions/setup-python@v5
+      - name: "Set up Python"
+        uses: actions/setup-python@v6
         with:
-          python-version: '3.11'
+          python-version-file: ".python-version"
 
-      - name: Install uv package manager
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-
-      - name: Add uv to PATH
-        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
 
       - name: Install dependencies with uv
         run: uv pip sync --no-cache
@@ -81,4 +77,3 @@ jobs:
           content-filepath: ${{ steps.get_path.outputs.md_path }}
           # (可选) 为创建的 Issue 添加标签，可以添加多个，用逗号分隔
           labels: arxiv-report, automated
-
