--- a/.github/workflows/arxiv-daily.yml
+++ b/.github/workflows/arxiv-daily.yml
@@ -42,13 +42,13 @@ jobs:
           RESEARCH_PREFER: ${{ secrets.RESEARCH_PREFER }}
           RESEARCH_NOT_PREFER: ${{ secrets.RESEARCH_NOT_PREFER }}
           PREFER_CATEGORY: ${{ secrets.PREFER_CATEGORY }}
-        run: python -m scripts/githubPublish.py
+        run: python -m scripts/githubPublish
 
       - name: 6. Get today's report path
         id: get_path
         run: |
           set -e
-          md_path="$(python -m scripts/getTodayPath.py)"
+          md_path="$(python -m scripts/getTodayPath)"
           if [ -z "$md_path" ]; then
             echo "Error: getTodayPath.py returned empty path" >&2
             exit 1
